--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="shortcut icon" type="image/svg" href="icon.png">
 
 	<link rel="stylesheet" href="css\style.css">
+
+	<!-- Я не знаю зачем я это отправил, мб как долбоёб себя веду, который на что-то там надеется. Не надеется -->
 </head>
 <body>
 <!-- CSS Ticket inspired by -->
